vpc.tf
# Internet VPC
resource "aws_vpc" "webapp-prod" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
  enable_classiclink   = "false"
  tags = {
    Name = "webapp-prod"
  }
}

# Subnets
resource "aws_subnet" "webapp-prod-public-1" {
  vpc_id                  = aws_vpc.webapp-prod.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "eu-west-1a"

  tags = {
    Name = "main-public-1"
  }
}

resource "aws_subnet" "webapp-prod-private-1" {
  vpc_id                  = aws_vpc.webapp-prod.id
  cidr_block              = "10.0.4.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "eu-west-1a"

  tags = {
    Name = "webapp-prod-private-1"
  }
}


# Internet GW
resource "aws_internet_gateway" "main-gw" {
  vpc_id = aws_vpc.webapp-prod.id

  tags = {
    Name = "main"
  }
}

# route tables
resource "aws_route_table" "webapp-prod-public" {
  vpc_id = aws_vpc.webapp-prod.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main-gw.id
  }

  tags = {
    Name = "webapp-prod-public-1"
  }
}

# route associations public
resource "aws_route_table_association" "main-public-1-a" {
  subnet_id      = aws_subnet.webapp-prod-public-1.id
  route_table_id = aws_route_table.webapp-prod-public.id
}
